--- a/day02/index.html
+++ b/day02/index.html
@@ -29,33 +29,30 @@
                 <section class="layout">
                     <div class="layout__inner">
                         <div class="card">
-                            <div class="card__transform">
-                                <div class="card__img">
-                                    <img src="https://funmauj.b-cdn.net/test/403535.jpg" alt="">
-                                </div>
+                            <div class="card__img">
+                                <a href="#" class="card__img__link"><img src="https://funmauj.b-cdn.net/test/403535.jpg"
+                                        alt=""></a>
                             </div>
                             <div class="card__btn">
-                                <button class="">Product Link</button>
+                                <a class="">Product Link</a>
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card__transform">
-                                <div class="card__img">
-                                    <img src="https://funmauj.b-cdn.net/test/403535.jpg" alt="">
-                                </div>
+                            <div class="card__img">
+                                <a href="#" class="card__img__link"><img src="https://funmauj.b-cdn.net/test/403535.jpg"
+                                        alt=""></a>
                             </div>
                             <div class="card__btn">
-                                <button class="">Product Link</button>
+                                <a class="">Product Link</a>
                             </div>
                         </div>
                         <div class="card">
-                            <div class="card__transform">
-                                <div class="card__img">
-                                    <img src="https://funmauj.b-cdn.net/test/403535.jpg" alt="">
-                                </div>
+                            <div class="card__img">
+                                <a href="#" class="card__img__link"><img src="https://funmauj.b-cdn.net/test/403535.jpg"
+                                        alt=""></a>
                             </div>
                             <div class="card__btn">
-                                <button class="">Product Link</button>
+                                <a class="">Product Link</a>
                             </div>
                         </div>
                     </div>
