--- a/day02/index.html
+++ b/day02/index.html
@@ -16,14 +16,15 @@
                     Logo
                 </h1>
             </div>
-            <nav class="logo__nav">
-                <ul>
-                    <li>About</li>
-                    <li>Privacy</li>
-                    <li>Browser</li>
-                </ul>
-            </nav>
+
         </header>
+        <nav class="">
+            <ul>
+                <li>About</li>
+                <li>Privacy</li>
+                <li>Browser</li>
+            </ul>
+        </nav>
         <article class="content">
             <div class="content__inner">
                 <section class="layout">
