--- a/day03/html/index.html
+++ b/day03/html/index.html
@@ -89,10 +89,239 @@
     </section>
     <section class="explore">
         <div class="explore__inner">
-            <div class="background-img"></div>
-            <h2>Explore Destinations & Activities</h2>
+            <div class="explore__title-img">
+                <img src="../img/explore/title.png" alt="">
+            </div>
+            <!-- <div class="background-img"></div> -->
+            <div class="explore__title">
+                <h2>Explore Destinations & Activities</h2>
+            </div>
+            <div class="activity">
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="activity__card">
+                    <div class="activity__card__imgbox">
+                        <img src="../img/explore/card-img1.png" alt="">
+                        <div class="favourite">
+                            <a href="#"></a>
+                        </div>
+                    </div>
+                    <div class="activity__card__price">
+                        <p>$36/night</p>
+                    </div>
+                    <div class="activity__card__txtbox">
+                        <h3>Trickle Creek Ranch</h3>
+                        <p>Book unique camping experiences on over 300,000 campsites.</p>
+                        <div class="c-btn c-btn--readmore">
+                            <a href="">Read More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="c-btn c-btn--viewall">
+                    <a href="#">View all</a>
+                </div>
+            </div>
         </div>
     </section>
+    <form action="#" class="in-touch-form">
+
+    </form>
 </body>
 
 </html>
