--- a/day02/index.html
+++ b/day02/index.html
@@ -60,10 +60,10 @@
                     <div class="faq">
                         <div class="faq__inner">
                             <div class="txt-box">
-                                <div class="txt-box__show">
+                                <div class="txt-box__header">
                                     <h2>FAQ</h2>
                                 </div>
-                                <div class="txt-box__hide">
+                                <div class="txt-box__para">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sapiente dolor
                                         aperiam illo magni quam rerum laudantium, laborum alias facilis sunt ipsam
                                         repellat molestias doloremque totam animi at, impedit esse voluptas recusandae
@@ -71,10 +71,10 @@
                                 </div>
                             </div>
                             <div class="txt-box">
-                                <div class="txt-box__show">
+                                <div class="txt-box__header">
                                     <h2>FAQ</h2>
                                 </div>
-                                <div class="txt-box__hide">
+                                <div class="txt-box__para">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sapiente dolor
                                         aperiam illo magni quam rerum laudantium, laborum alias facilis sunt ipsam
                                         repellat molestias doloremque totam animi at, impedit esse voluptas recusandae
@@ -82,10 +82,10 @@
                                 </div>
                             </div>
                             <div class="txt-box">
-                                <div class="txt-box__show">
+                                <div class="txt-box__header">
                                     <h2>FAQ</h2>
                                 </div>
-                                <div class="txt-box__hide">
+                                <div class="txt-box__para">
                                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea sapiente dolor
                                         aperiam illo magni quam rerum laudantium, laborum alias facilis sunt ipsam
                                         repellat molestias doloremque totam animi at, impedit esse voluptas recusandae
@@ -99,6 +99,8 @@
         </article>
     </div>
 
+
+    <script src="js/app.js"></script>
 </body>
 
 </html>
