--- a/day03/html/index.html
+++ b/day03/html/index.html
@@ -319,9 +319,31 @@
             </div>
         </div>
     </section>
-    <form action="#" class="in-touch-form">
+    <section class="in-touch-form">
 
-    </form>
+        <div class="in-touch-form__inner">
+            <div class="in-touch-form__txt-box">
+                <h2>Let's Stay in Touch</h2>
+                <p>Get travel planning ideas, helpful tips, and stories from our visitors delivered right to your inbox.
+                </p>
+                <form class="input-box" action="#">
+                    <input type="email" class="input-box__email">
+                    <div class="input-box__inner">
+                        <div class="input-box__inner__placeholder">
+                            <img src="../img/form/mail.png" alt="">
+                        </div>
+                        <div class="input-box__inner__icon">
+                            <label for="submit"><img src="../img/form/icon.png" alt=""><input type="submit" id="submit"
+                                    value=""></label>
+                        </div>
+                    </div>
+                </form>
+            </div>
+            <div class="in-touch-form__img">
+                <img src="../img/form/tree.png" alt="">
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
